[package]
name = "mtrx-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mtrx_rs"
crate-type = ["cdylib"]

[dependencies]
closure = "0.3.0"
crossbeam = "0.8.2"
crossbeam-utils = "0.8.16"
num_cpus = "1.15.0"
pyo3 = "0.19.0"
rand = "0.8.5"
rayon = "1.7.0"

[dev-dependencies]
rstest = "0.17.0"
